--- a/wsgiadmin/templates/stats/bill.html
+++ b/wsgiadmin/templates/stats/bill.html
@@ -11,7 +11,7 @@
 
     <table class="table table-striped">
     <tr>
-        <th colspan="3">{% trans "What you payed in last 14 days" %}</th>
+        <th colspan="3">{% trans "What you paid in last 14 days" %}</th>
     </tr>
     {% for day in days %}
     <tr>
@@ -22,7 +22,7 @@
     {% endfor %}
     <table class="table table-striped">
     <tr>
-        <th colspan="3">{% trans "What you payed by months" %}</th>
+        <th colspan="3">{% trans "What you paid by months" %}</th>
     </tr>
     {% for month in months %}
     <tr>
