--- a/wsgiadmin/templates/apps/app_info.html
+++ b/wsgiadmin/templates/apps/app_info.html
@@ -123,7 +123,7 @@
         <p><a href="{% url 'db_add' %}?app_id={{ app.id }}">{% trans "Add database to this app" %}</a></p>
     {% endif %}
 
-    <h2>{% trans "FTP access" %}</h2>
+    <!--<h2>{% trans "FTP access" %}</h2>-->
 
     {% if ftps %}
         <p><a href="{% url 'ftp_add' %}?app_id={{ app.id }}">{% trans "Add FTP access to this app" %}</a></p>
@@ -146,7 +146,7 @@
             {% endfor %}
         </table>
     {% else %}
-        <p><a href="{% url 'ftp_add' %}?app_id={{ app.id }}">{% trans "Add database to this app" %}</a></p>
+        <!--<p><a href="{% url 'ftp_add' %}?app_id={{ app.id }}">{% trans "Add database to this app" %}</a></p>-->
     {% endif %}
 
     <h2>{% trans "Log files" %}</h2>
