--- a/wsgiadmin/templates/base.html
+++ b/wsgiadmin/templates/base.html
@@ -11,7 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{{ STATIC_URL }}favicon.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" media="all">
     <!--[if IE lt 8]>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/ie.css">
@@ -21,15 +20,14 @@
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!--[if lt IE 9]>
-	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+	<script src="//css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 <![endif]-->
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="http://code.jquery.com/jquery-migrate-1.1.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.1.0.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{{ STATIC_URL }}jqueryui/css/ui-lightness/jquery-ui-1.9.2.custom.min.css">
     <script src="{{ STATIC_URL }}jqueryui/js/jquery-ui-1.9.2.custom.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.cookie.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-dropdown.js"></script>
     <script type="text/javascript">
         var delete_success_callback = function (data) {
             if (data.result == 'OK') {
