--- a/wsgiadmin/templates/apps/app_info.html
+++ b/wsgiadmin/templates/apps/app_info.html
@@ -73,20 +73,20 @@
                 <th>{% trans "Actions" %}</th>
                 <td>
                     {% if app.app_type == "python" or app.app_type == "native" %}
-                        <a href="{% url 'app_restart' %}?app_id={{ app.id }}" class="btn btn-primary"><span class="glyphicon glyphicon-refresh glyphicon-white"></span> {% trans "Restart" %}</a>
+                        <a href="{% url 'app_restart' %}?app_id={{ app.id }}" class="btn btn-primary"><span class="glyphicon glyphicon-refresh"></span> {% trans "Restart" %}</a>
                     {% endif %}
                     {% if app.app_type == "static" %}
-                        <a href="{% url 'app_params_static' app_id=app.id %}" class="btn btn-warning"><span class="glyphicon glyphicon-edit glyphicon-white"></span> {% trans "Parameters" %}</a>
+                        <a href="{% url 'app_params_static' app_id=app.id %}" class="btn btn-warning"><span class="glyphicon glyphicon-edit"></span> {% trans "Parameters" %}</a>
                     {% elif app.app_type == "php" %}
-                        <a href="{% url 'app_params_php' app_id=app.id %}" class="btn btn-warning"><span class="glyphicon glyphicon-edit glyphicon-white"></span> {% trans "Parameters" %}</a>
+                        <a href="{% url 'app_params_php' app_id=app.id %}" class="btn btn-warning"><span class="glyphicon glyphicon-edit"></span> {% trans "Parameters" %}</a>
                     {% elif app.app_type == "python" %}
-                        <a href="{% url 'app_params_python' app_id=app.id %}" class="btn btn-warning"><span class="glyphicon glyphicon-edit glyphicon-white"></span> {% trans "Parameters" %}</a>
+                        <a href="{% url 'app_params_python' app_id=app.id %}" class="btn btn-warning"><span class="glyphicon glyphicon-edit"></span> {% trans "Parameters" %}</a>
                     {% elif app.app_type == "native" %}
-                        <a href="{% url 'app_params_native' app_id=app.id %}" class="btn btn-warning"><span class="glyphicon glyphicon-edit glyphicon-white"></span> {% trans "Parameters" %}</a>
+                        <a href="{% url 'app_params_native' app_id=app.id %}" class="btn btn-warning"><span class="glyphicon glyphicon-edit"></span> {% trans "Parameters" %}</a>
                     {% elif app.app_type == "proxy" %}
-                        <a href="{% url 'app_params_proxy' app_id=app.id %}" class="btn btn-warning"><span class="glyphicon glyphicon-edit glyphicon-white"></span> {% trans "Parameters" %}</a>
+                        <a href="{% url 'app_params_proxy' app_id=app.id %}" class="btn btn-warning"><span class="glyphicon glyphicon-edit"></span> {% trans "Parameters" %}</a>
                     {% endif %}
-                    <a href="#a" onclick="if(confirm('{% trans "Are you sure?" %}')) {document.location= '{% url 'app_rm' %}?app_id={{ app.id }}';}" class="btn btn-danger"><span class="glyphicon glyphicon-remove glyphicon glyphicon-white"></span> {% trans "Delete" %}</a>
+                    <a href="#a" onclick="if(confirm('{% trans "Are you sure?" %}')) {document.location= '{% url 'app_rm' %}?app_id={{ app.id }}';}" class="btn btn-danger"><span class="glyphicon glyphicon-remove glyphicon"></span> {% trans "Delete" %}</a>
                 </td>
             </tr>
         </table>
