--- a/wsgiadmin/templates/boxes.html
+++ b/wsgiadmin/templates/boxes.html
@@ -17,8 +17,8 @@
     <h3>{% trans "List of e-mail boxes" %}</h3>
     <hr>
     <p>
-        <a href="{% url 'email_domain_add' %}" class="btn btn-primary"><i class="icon-plus icon-white"></i> {% trans "Add domain" %}</a>
-        {% if object_list %}<a href="{% url 'add_mailbox' %}" class="btn btn-primary"><i class="icon-plus icon-white"></i> {% trans "Add mailbox" %}</a>{% endif %}
+        <a href="{% url 'email_domain_add' %}" class="btn btn-primary"><span class="glyphicon-plus glyphicon"></span> {% trans "Add domain" %}</a>
+        {% if object_list %}<a href="{% url 'add_mailbox' %}" class="btn btn-primary"><span class="glyphicon-plus glyphicon"></span> {% trans "Add mailbox" %}</a>{% endif %}
     </p>
     <hr>
 
@@ -26,7 +26,7 @@
         {% for domain in object_list %}
             <tr>
                 <th>{% trans "Domain" %} {{ domain.name }}</th>
-                <td><a href="#a" class="btn btn-mini btn-danger" onclick="if(confirm('{% trans "Are you sure? This delete all mailboxes under this domain." %}')) document.location='{% url 'email_domain_delete' %}?domain_pk={{ domain.id }}';"><i class="icon-remove icon-white"></i> Delete whole domain</a></td>
+                <td><a href="#a" class="btn btn-mini btn-danger" onclick="if(confirm('{% trans "Are you sure? This delete all mailboxes under this domain." %}')) document.location='{% url 'email_domain_delete' %}?domain_pk={{ domain.id }}';"><span class="glyphicon-remove glyphicon"></span> Delete whole domain</a></td>
             </tr>
             {% for email in domain.boxes %}
                 <tr>
