--- a/wsgiadmin/templates/form.html
+++ b/wsgiadmin/templates/form.html
@@ -4,25 +4,31 @@
 {% block bodyclass %}registrace{% endblock %}
 
 {% block header %}
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="/" class="brand">{{ site }}</a>
-            <div class="nav-collapse collapse pull-left">
-                <ul class="nav pull-left" id="main-menu">
-                    <li {% if menu_active == "login" %} class="active"{% endif %}><a href="{% url 'login' %}">{% trans "Login" %}</a></li>
-                    <li {% if menu_active == "registration" %} class="active"{% endif %}><a href="{% url 'registration' %}">{% trans "Registration" %}</a></li>
-                    <li {% if menu_active == "reset_passwd" %} class="active"{% endif %}><a href="{% url 'reset_passwd' %}">{% trans "Lost password" %}</a></li>
-                </ul>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar-inner">
+            <div class="container">
+                <div class="header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse"
+                            data-target=".navbar-ex1-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a href="/" class="navbar-brand">{{ site }}</a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                    <ul class="nav navbar-nav">
+                        <li {% if menu_active == "login" %} class="active"{% endif %}><a href="{% url 'login' %}">{% trans "Login" %}</a></li>
+                        <li {% if menu_active == "registration" %} class="active"{% endif %}><a href="{% url 'registration' %}">{% trans "Registration" %}</a></li>
+                        <li {% if menu_active == "reset_passwd" %} class="active"{% endif %}><a href="{% url 'reset_passwd' %}">{% trans "Lost password" %}</a></li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+
             </div>
         </div>
-    </div>
-</div>
+    </nav>
 {% endblock %}
 
 {% block body %}
