App install and update fix

--- a/wsgiadmin/templates/info.html
+++ b/wsgiadmin/templates/info.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="clear"></div>
 
-    <h2>{% trans "Account's informations" %}</h2>
+    <h2>{% trans "Account's information" %}</h2>
 
     <table class="table table-striped">
         {% if u.parms.address.getName %}
