Node.js support, Gunicorn support, backends are separated now

--- a/wsgiadmin/templates/base.html
+++ b/wsgiadmin/templates/base.html
@@ -10,7 +10,8 @@
     <meta name="description" content="{{ site }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{{ STATIC_URL }}favicon.png" type="image/png">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css">-->
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" media="all">
     <!--[if IE lt 8]>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/ie.css">
@@ -24,7 +25,8 @@
 <![endif]-->
     <script src="//code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.1.0.min.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
+    <!--<script type="text/javascript" src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>-->
+    <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{{ STATIC_URL }}jqueryui/css/ui-lightness/jquery-ui-1.9.2.custom.min.css">
     <script src="{{ STATIC_URL }}jqueryui/js/jquery-ui-1.9.2.custom.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.cookie.js"></script>
