--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -227,6 +227,12 @@
         <li>
             <a href="{% url 'app_add_python' %}"><span class="glyphicon glyphicon-plus"></span> {% trans "Add python app" %}</a>
         </li>
+        <li>
+            <a href="{% url 'app_add_gunicorn' %}"><span class="glyphicon glyphicon-plus"></span> {% trans "Add python app (Gunicorn)" %}</a>
+        </li>
+        <li>
+            <a href="{% url 'app_add_node' %}"><span class="glyphicon glyphicon-plus"></span> {% trans "Add Node.js app" %}</a>
+        </li>
         <!--<li>
                             <a href="{% url 'app_add_native' %}"><span class="glyphicon glyphicon-plus"></span> {% trans "Add native app" %}</a>
                         </li>
