Bugfixies in node.js

--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -228,10 +228,10 @@
             <a href="{% url 'app_add_python' %}"><span class="glyphicon glyphicon-plus"></span> {% trans "Add python app" %}</a>
         </li>
         <li>
-            <a href="{% url 'app_add_gunicorn' %}"><span class="glyphicon glyphicon-plus"></span> {% trans "Add python app (Gunicorn)" %}</a>
+            <a href="{% url 'app_add_gunicorn' %}"><span class="glyphicon glyphicon-plus"></span> {% trans "Add Gunicorn app" %} <span class="label label-danger">Beta</span></a>
         </li>
         <li>
-            <a href="{% url 'app_add_node' %}"><span class="glyphicon glyphicon-plus"></span> {% trans "Add Node.js app" %}</a>
+            <a href="{% url 'app_add_node' %}"><span class="glyphicon glyphicon-plus"></span> {% trans "Add Node.js app" %} <span class="label label-danger">Beta</span></a>
         </li>
         <!--<li>
                             <a href="{% url 'app_add_native' %}"><span class="glyphicon glyphicon-plus"></span> {% trans "Add native app" %}</a>
